@@ -13,10 +13,6 @@
 package org.assertj.core.api;
 
 import static java.util.Objects.requireNonNull;
-import static java.util.concurrent.TimeUnit.HOURS;
-import static java.util.concurrent.TimeUnit.MILLISECONDS;
-import static java.util.concurrent.TimeUnit.MINUTES;
-import static java.util.concurrent.TimeUnit.SECONDS;
 import static java.util.stream.Collectors.toList;
 import static org.assertj.core.util.DateUtil.newIsoDateFormat;
 import static org.assertj.core.util.DateUtil.newIsoDateTimeFormat;
@@ -42,12 +38,11 @@ import java.util.TimeZone;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 
+import org.assertj.core.api.comparisonstrategy.ComparatorBasedComparisonStrategy;
 import org.assertj.core.configuration.Configuration;
 import org.assertj.core.configuration.ConfigurationProvider;
-import org.assertj.core.internal.ComparatorBasedComparisonStrategy;
 import org.assertj.core.internal.Dates;
 import org.assertj.core.util.CheckReturnValue;
-import org.assertj.core.util.VisibleForTesting;
 
 /**
  * Base class for all implementations of assertions for {@link Date}s.
@@ -56,7 +51,7 @@ import org.assertj.core.util.VisibleForTesting;
  * {@link String} representing a Date.<br>
  * For the latter, the default format follows ISO 8901: "yyyy-MM-dd", user can override it with a custom format by
  * calling {@link #withDateFormat(DateFormat)}.<br>
- * The user custom format will then be used for all next Date assertions (i.e not limited to the current assertion) in
+ * The user custom format will then be used for all next Date assertions (i.e. not limited to the current assertion) in
  * the test suite.<br>
  * To turn back to default format, simply call {@link #withDefaultDateFormatsOnly()}.
  *
@@ -70,7 +65,7 @@ import org.assertj.core.util.VisibleForTesting;
  * @author Michal Kordas
  * @author Eddú Meléndez
  */
-public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> extends AbstractAssert<SELF, Date> {
+public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> extends AbstractAssertWithComparator<SELF, Date> {
 
   private static final String DATE_FORMAT_PATTERN_SHOULD_NOT_BE_NULL = "Given date format pattern should not be null";
   private static final String DATE_FORMAT_SHOULD_NOT_BE_NULL = "Given date format should not be null";
@@ -81,7 +76,7 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   private static List<DateFormat> DEFAULT_DATE_FORMATS = defaultDateFormats();
   private static boolean lenientParsing = Configuration.LENIENT_DATE_PARSING;
 
-  @VisibleForTesting
+  // TODO reduce the visibility of the fields annotated with @VisibleForTesting
   static List<DateFormat> defaultDateFormats() {
     if (DEFAULT_DATE_FORMATS == null || defaultDateFormatMustBeRecreated()) {
       DEFAULT_DATE_FORMATS = list(newIsoDateTimeWithMsAndIsoTimeZoneFormat(lenientParsing),
@@ -105,10 +100,10 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
    * to Date.<br>
    * It keeps the insertion order, so the first format added will be the first format used.
    */
-  @VisibleForTesting
+  // TODO reduce the visibility of the fields annotated with @VisibleForTesting
   static ThreadLocal<LinkedHashSet<DateFormat>> userDateFormats = ThreadLocal.withInitial(LinkedHashSet::new);
 
-  @VisibleForTesting
+  // TODO reduce the visibility of the fields annotated with @VisibleForTesting
   Dates dates = Dates.instance();
 
   protected AbstractDateAssert(Date actual, Class<?> selfType) {
@@ -179,409 +174,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
    */
   public SELF isEqualTo(Instant instant) {
     return isEqualTo(dateFrom(instant));
-  }
-
-  /**
-   * Same assertion as {@link AbstractDateAssert#isEqualToIgnoringHours(Date)} but given Date is represented as String
-   * either with one of the default supported date formats or user custom date format (set with method
-   * {@link #withDateFormat(DateFormat)}).
-   * <p>
-   * User custom date format take precedence over the default ones.
-   * <p>
-   * Unless specified otherwise, beware that the default formats are expressed in the current local timezone.
-   * <p>
-   * Example:
-   * <pre><code class='java'> // OK : all dates fields are the same up to minutes excluded
-   * assertThat("2003-04-26T13:01:35").isEqualToIgnoringHours("2003-04-26T14:02:35");
-   *
-   * // KO : fail as day fields differ
-   * assertThat("2003-04-26T14:01:35").isEqualToIgnoringHours("2003-04-27T13:02:35")</code></pre>
-   * <p>
-   * Defaults date format (expressed in the local time zone unless specified otherwise) are:
-   * <ul>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSSX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ssX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss</code></li>
-   * <li><code>yyyy-MM-dd</code></li>
-   * </ul>
-   * <p>
-   * Example of valid string date representations:
-   * <ul>
-   * <li><code>2003-04-26T03:01:02.758+00:00</code></li>
-   * <li><code>2003-04-26T03:01:02.999</code></li>
-   * <li><code>2003-04-26 03:01:02.999</code></li>
-   * <li><code>2003-04-26T03:01:02+00:00</code></li>
-   * <li><code>2003-04-26T13:01:02</code></li>
-   * <li><code>2003-04-26</code></li>
-   * </ul>
-   * <p>
-   * If you are getting an {@code IllegalArgumentException} with <i>"Unknown pattern character 'X'"</i> message (some Android versions don't support it),
-   * you can explicitly specify the date format to use so that the default ones are bypassed.
-   *
-   * @param dateAsString the given Date represented as String in default or custom date format.
-   * @return this assertion object.
-   * @throws AssertionError if actual and given Date represented as String are not equal ignoring hours, minutes,
-   *           seconds and milliseconds.
-   * @throws AssertionError if the given date as String could not be converted to a Date.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringHours(String dateAsString) {
-    return isEqualToIgnoringHours(parse(dateAsString));
-  }
-
-  /**
-   * Same assertion as {@link AbstractDateAssert#isEqualToIgnoringHours(Date)} but given Date is represented as
-   * an {@code java.time.Instant}.
-   * <p>
-   * Example:
-   * <pre><code class='java'> assertThat(new Date()).isEqualToIgnoringHours(Instant.now());</code></pre>
-   *
-   * @param instant the given {@code Instant}.
-   * @return this assertion object.
-   * @throws AssertionError if actual {@code Date} and given {@code Instant} are not equal ignoring hours, minutes, seconds and milliseconds.
-   * @since 3.19.0
-   * @deprecated Use {@link #isCloseTo(Instant, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringHours(Instant instant) {
-    return isEqualToIgnoringHours(dateFrom(instant));
-  }
-
-  /**
-   * Same assertion as {@link AbstractAssert#isEqualTo(Object)} but the comparison ignores hours, minutes, seconds and milliseconds.
-   * <p>
-   * Example:
-   * <pre><code class='java'> Date date1 = parseDatetime("2003-04-26T13:01:35");
-   * Date date2 = parseDatetime("2003-04-26T14:01:00");
-   * Date date3 = parseDatetime("2003-04-27T13:01:35");
-   *
-   * // OK : all dates fields are the same up to hours excluded
-   * assertThat(date1).isEqualToIgnoringHours(date2);
-   *
-   * // KO : fail as day fields differ
-   * assertThat(date1).isEqualToIgnoringHours(date3);</code></pre>
-   *
-   * @param date the given Date.
-   * @return this assertion object.
-   * @throws AssertionError if actual and given Date represented as String are not equal ignoring hours, minutes,
-   *           seconds and milliseconds.
-   * @throws AssertionError if the given date as String could not be converted to a Date.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringHours(Date date) {
-    dates.assertIsEqualWithPrecision(info, actual, date, HOURS);
-    return myself;
-  }
-
-  /**
-   * Same assertion as {@link AbstractDateAssert#isEqualToIgnoringMinutes(Date)} but given Date is represented as
-   * String either with one of the default supported date format or user custom date format (set with method
-   * {@link #withDateFormat(DateFormat)}).
-   * <p>
-   * User custom date format take precedence over the default ones.
-   * <p>
-   * Unless specified otherwise, beware that the default formats are expressed in the current local timezone.
-   * <p>
-   * Example:
-   * <pre><code class='java'> withDateFormat("yyyy-MM-dd'T'HH:mm:ss");
-   * // OK : all dates fields are the same up to minutes excluded
-   * assertThat("2003-04-26T13:01:35").isEqualToIgnoringMinutes("2003-04-26T13:02:35");
-   *
-   * // KO : fail as hour fields differ
-   * assertThat("2003-04-26T14:01:35").isEqualToIgnoringMinutes("2003-04-26T13:02:35")</code></pre>
-   * <p>
-   * Defaults date format (expressed in the local time zone unless specified otherwise) are:
-   * <ul>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSSX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ssX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss</code></li>
-   * <li><code>yyyy-MM-dd</code></li>
-   * </ul>
-   * <p>
-   * Example of valid string date representations:
-   * <ul>
-   * <li><code>2003-04-26T03:01:02.758+00:00</code></li>
-   * <li><code>2003-04-26T03:01:02.999</code></li>
-   * <li><code>2003-04-26 03:01:02.999</code></li>
-   * <li><code>2003-04-26T03:01:02+00:00</code></li>
-   * <li><code>2003-04-26T13:01:02</code></li>
-   * <li><code>2003-04-26</code></li>
-   * </ul>
-   * <p>
-   * If you are getting an {@code IllegalArgumentException} with <i>"Unknown pattern character 'X'"</i> message (some Android versions don't support it),
-   * you can explicitly specify the date format to use so that the default ones are bypassed.
-   *
-   * @param dateAsString the given Date represented as String in default or custom date format.
-   * @return this assertion object.
-   * @throws AssertionError if actual and given Date represented as String are not equal ignoring minutes, seconds and
-   *           milliseconds.
-   * @throws AssertionError if the given date as String could not be converted to a Date.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringMinutes(String dateAsString) {
-    return isEqualToIgnoringMinutes(parse(dateAsString));
-  }
-
-  /**
-   * Same assertion as {@link AbstractDateAssert#isEqualToIgnoringMinutes(Date)} but given Date is represented as
-   * an {@code java.time.Instant}.
-   * <p>
-   * Example:
-   * <pre><code class='java'> assertThat(new Date()).isEqualToIgnoringMinutes(Instant.now());</code></pre>
-   *
-   * @param instant the given {@code Instant}.
-   * @return this assertion object.
-   * @throws AssertionError if actual {@code Date} and given {@code Instant} are not equal ignoring minutes, seconds and milliseconds.
-   * @since 3.19.0
-   * @deprecated Use {@link #isCloseTo(Instant, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringMinutes(Instant instant) {
-    return isEqualToIgnoringMinutes(dateFrom(instant));
-  }
-
-  /**
-   * Same assertion as {@link AbstractAssert#isEqualTo(Object)} but given Date should not take care of minutes,
-   * seconds and millisecond precision.
-   * <p>
-   * Example:
-   * <pre><code class='java'> Date date1 = parseDatetime("2003-04-26T13:01:35");
-   * Date date2 = parseDatetime("2003-04-26T13:02:00");
-   * Date date3 = parseDatetime("2003-04-26T14:02:00");
-   *
-   * // OK : all dates fields are the same up to minutes excluded
-   * assertThat(date1).isEqualToIgnoringMinutes(date2);
-   *
-   * // KO : fail as hour fields differ
-   * assertThat(date1).isEqualToIgnoringMinutes(date3);</code></pre>
-   *
-   * @param date the given Date.
-   * @return this assertion object.
-   * @throws AssertionError if actual and given Date represented as String are not equal ignoring minutes, seconds and
-   *           milliseconds.
-   * @throws AssertionError if the given date as String could not be converted to a Date.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringMinutes(Date date) {
-    dates.assertIsEqualWithPrecision(info, actual, date, MINUTES);
-    return myself;
-  }
-
-  /**
-   * Same assertion as {@link AbstractDateAssert#isEqualToIgnoringSeconds(Date)} but given Date is represented as
-   * String
-   * either with one of the default supported date formats or user custom date format (set with method
-   * {@link #withDateFormat(DateFormat)}).
-   * <p>
-   * User custom date format takes precedence over the default ones.
-   * <p>
-   * Unless specified otherwise, beware that the default formats are expressed in the current local timezone.
-   * <p>
-   * Example:
-   * <pre><code class='java'> Date date1 = parseDatetime("2003-04-26T13:01:35");
-   *
-   * // OK : all dates fields are the same up to seconds excluded
-   * assertThat(date1).isEqualToIgnoringSeconds("2003-04-26T13:01:57");
-   *
-   * // KO : fail as minute fields differ
-   * assertThat(date1).isEqualToIgnoringMinutes("2003-04-26T13:02:00")</code></pre>
-   * <p>
-   * Defaults date format (expressed in the local time zone unless specified otherwise) are:
-   * <ul>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSSX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ssX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss</code></li>
-   * <li><code>yyyy-MM-dd</code></li>
-   * </ul>
-   * <p>
-   * Example of valid string date representations:
-   * <ul>
-   * <li><code>2003-04-26T03:01:02.758+00:00</code></li>
-   * <li><code>2003-04-26T03:01:02.999</code></li>
-   * <li><code>2003-04-26 03:01:02.999</code></li>
-   * <li><code>2003-04-26T03:01:02+00:00</code></li>
-   * <li><code>2003-04-26T13:01:02</code></li>
-   * <li><code>2003-04-26</code></li>
-   * </ul>
-   * <p>
-   * If you are getting an {@code IllegalArgumentException} with <i>"Unknown pattern character 'X'"</i> message (some Android versions don't support it),
-   * you can explicitly specify the date format to use so that the default ones are bypassed.
-   *
-   * @param dateAsString the given Date represented as String in default or custom date format.
-   * @return this assertion object.
-   * @throws AssertionError if actual and given Date represented as String are not equal ignoring seconds and
-   *           milliseconds.
-   * @throws AssertionError if the given date as String could not be converted to a Date.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringSeconds(String dateAsString) {
-    return isEqualToIgnoringSeconds(parse(dateAsString));
-  }
-
-  /**
-   * Same assertion as {@link AbstractDateAssert#isEqualToIgnoringSeconds(Date)} but given Date is represented as
-   * an {@code java.time.Instant}.
-   * <p>
-   * Example:
-   * <pre><code class='java'> assertThat(new Date()).isEqualToIgnoringSeconds(Instant.now());</code></pre>
-   *
-   * @param instant the given {@code Instant}.
-   * @return this assertion object.
-   * @throws AssertionError if actual {@code Date} and given {@code Instant} are not equal ignoring seconds and milliseconds.
-   * @since 3.19.0
-   * @deprecated Use {@link #isCloseTo(Instant, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringSeconds(Instant instant) {
-    return isEqualToIgnoringSeconds(dateFrom(instant));
-  }
-
-  /**
-   * Same assertion as {@link AbstractAssert#isEqualTo(Object)} but given Date should not take care of seconds and
-   * millisecond precision.
-   * <p>
-   * Example:
-   * <pre><code class='java'> Date date1 = parseDatetime("2003-04-26T13:01:35");
-   * Date date2 = parseDatetime("2003-04-26T13:01:36");
-   *
-   * // OK : all dates fields are the same up to seconds excluded
-   * assertThat(date1).isEqualToIgnoringSeconds(date2);
-   *
-   * // KO : fail as minute fields differ
-   * Date date3 = parseDatetime("2003-04-26T13:02:00");
-   * assertThat(date1).isEqualToIgnoringSeconds(date3);</code></pre>
-   *
-   * @param date the given Date represented as String in default or custom date format.
-   * @return this assertion object.
-   * @throws AssertionError if actual and given Date represented as String are not equal ignoring seconds and
-   *           milliseconds.
-   * @throws AssertionError if the given date as String could not be converted to a Date.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringSeconds(Date date) {
-    dates.assertIsEqualWithPrecision(info, actual, date, SECONDS);
-    return myself;
-  }
-
-  /**
-   * Same assertion as {@link AbstractDateAssert#isEqualToIgnoringMillis(Date)} but given Date is represented as String
-   * either with one of the default supported date formats or user custom date format (set with method
-   * {@link #withDateFormat(DateFormat)}).
-   * <p>
-   * User custom date format takes precedence over the default ones.
-   * <p>
-   * Unless specified otherwise, beware that the default formats are expressed in the current local timezone.
-   * <p>
-   * Example:
-   * <pre><code class='java'> Date date1 = parseDatetimeWithMs("2003-04-26T13:01:35.998");
-   *
-   * // OK : all dates fields are the same up to milliseconds excluded
-   * assertThat().isEqualToIgnoringMillis("2003-04-26T13:01:35.997");
-   *
-   * // KO : fail as seconds fields differ
-   * assertThat("2003-04-26T13:01:35.998").isEqualToIgnoringMinutes("2003-04-26T13:01:36.998")</code></pre>
-   * <p>
-   * Defaults date format (expressed in the local time zone unless specified otherwise) are:
-   * <ul>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSSX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ssX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss</code></li>
-   * <li><code>yyyy-MM-dd</code></li>
-   * </ul>
-   * <p>
-   * Example of valid string date representations:
-   * <ul>
-   * <li><code>2003-04-26T03:01:02.758+00:00</code></li>
-   * <li><code>2003-04-26T03:01:02.999</code></li>
-   * <li><code>2003-04-26 03:01:02.999</code></li>
-   * <li><code>2003-04-26T03:01:02+00:00</code></li>
-   * <li><code>2003-04-26T13:01:02</code></li>
-   * <li><code>2003-04-26</code></li>
-   * </ul>
-   * <p>
-   * If you are getting an {@code IllegalArgumentException} with <i>"Unknown pattern character 'X'"</i> message (some Android versions don't support it),
-   * you can explicitly specify the date format to use so that the default ones are bypassed.
-   *
-   * @param dateAsString the given Date represented as String in default or custom date format.
-   * @return this assertion object.
-   * @throws AssertionError if actual and given Date represented as String are not equal ignoring milliseconds.
-   * @throws AssertionError if the given date as String could not be converted to a Date.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringMillis(String dateAsString) {
-    return isEqualToIgnoringMillis(parse(dateAsString));
-  }
-
-  /**
-   * Same assertion as {@link AbstractDateAssert#isEqualToIgnoringMillis(Date)} but given Date is represented as
-   * an {@code java.time.Instant}.
-   * <p>
-   * Example:
-   * <pre><code class='java'> assertThat(new Date()).isEqualToIgnoringMillis(Instant.now());</code></pre>
-   *
-   * @param instant the given {@code Instant}.
-   * @return this assertion object.
-   * @throws AssertionError if actual {@code Date} and given {@code Instant} are not equal ignoring milliseconds.
-   * @since 3.19.0
-   * @deprecated Use {@link #isCloseTo(Instant, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringMillis(Instant instant) {
-    return isEqualToIgnoringMillis(dateFrom(instant));
-  }
-
-  /**
-   * Same assertion as {@link AbstractAssert#isEqualTo(Object)} but given Date should not take care of milliseconds
-   * precision.
-   * <p>
-   * Example:
-   * <pre><code class='java'> Date date1 = parseDatetimeAndMs("2003-04-26T13:01:35.001");
-   * Date date2 = parseDatetimeAndMs("2003-04-26T13:01:35.002");
-   * Date date3 = parseDatetimeAndMs("2003-04-26T14:01:36.001");
-   *
-   * // OK : all dates fields are the same up to milliseconds excluded
-   * assertThat(date1).isEqualToIgnoringMillis(date2);
-   *
-   * // KO : fail as second fields differ
-   * assertThat(date1).isEqualToIgnoringMillis(date3);</code></pre>
-   *
-   * @param date the given Date represented as String in default or custom date format.
-   * @return this assertion object.
-   * @throws AssertionError if actual and given Date represented as String are not equal ignoring milliseconds.
-   * @throws AssertionError if the given date as String could not be converted to a Date.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isEqualToIgnoringMillis(Date date) {
-    dates.assertIsEqualWithPrecision(info, actual, date, MILLISECONDS);
-    return myself;
   }
 
   /**
@@ -986,31 +578,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   }
 
   /**
-   * Verifies that the actual {@code Date} is before or equals to the given one.
-   * <p>
-   * Example:
-   * <pre><code class='java'> SimpleDateFormat dateFormat = new SimpleDateFormat(&quot;yyyy-MM-dd&quot;);
-   *
-   * // assertions will pass
-   * assertThat(dateFormat.parse(&quot;1990-12-01&quot;)).isBeforeOrEqualsTo(dateFormat.parse(&quot;2000-12-01&quot;));
-   * assertThat(dateFormat.parse(&quot;2000-12-01&quot;)).isBeforeOrEqualsTo(dateFormat.parse(&quot;2000-12-01&quot;));
-   *
-   * // assertion will fail
-   * assertThat(dateFormat.parse(&quot;2000-12-01&quot;)).isBeforeOrEqualsTo(dateFormat.parse(&quot;1990-12-01&quot;));</code></pre>
-   *
-   * @param other the given Date.
-   * @return this assertion object.
-   * @throws AssertionError if the actual {@code Date} is {@code null}.
-   * @throws NullPointerException if other {@code Date} is {@code null}.
-   * @throws AssertionError if the actual {@code Date} is not before or equals to the given one.
-   * @deprecated prefer calling {@link #isBeforeOrEqualTo(Date)}
-   */
-  @Deprecated
-  public SELF isBeforeOrEqualsTo(Date other) {
-    return isBeforeOrEqualTo(other);
-  }
-
-  /**
    * Verifies that the actual {@code Date} is before or equal to the given one.
    * <p>
    * Example:
@@ -1056,60 +623,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   public SELF isBeforeOrEqualTo(Instant other) {
     dates.assertIsBeforeOrEqualTo(info, actual, dateFrom(other));
     return myself;
-  }
-
-  /**
-   * Same assertion as {@link #isBeforeOrEqualsTo(Date)} but given date is represented as String either with one of the
-   * supported default date formats or a user custom date format (set with method {@link #withDateFormat(DateFormat)}).
-   * <p>
-   * User custom date format takes precedence over the default ones.
-   * <p>
-   * Unless specified otherwise, beware that the default formats are expressed in the current local timezone.
-   * <p>
-   * Example:
-   * <pre><code class='java'> // assertion will pass
-   * // theTwoTowers release date : 2002-12-18
-   * assertThat(theTwoTowers.getReleaseDate()).isBeforeOrEqualsTo("2002-12-19");
-   * assertThat(theTwoTowers.getReleaseDate()).isBeforeOrEqualsTo("2002-12-18");
-   *
-   * // assertion will fail
-   * assertThat(theTwoTowers.getReleaseDate()).isBeforeOrEqualsTo("2002-12-17")</code></pre>
-   * <p>
-   * Defaults date format (expressed in the local time zone unless specified otherwise) are:
-   * <ul>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSSX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ssX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss</code></li>
-   * <li><code>yyyy-MM-dd</code></li>
-   * </ul>
-   * <p>
-   * Example of valid string date representations:
-   * <ul>
-   * <li><code>2003-04-26T03:01:02.758+00:00</code></li>
-   * <li><code>2003-04-26T03:01:02.999</code></li>
-   * <li><code>2003-04-26 03:01:02.999</code></li>
-   * <li><code>2003-04-26T03:01:02+00:00</code></li>
-   * <li><code>2003-04-26T13:01:02</code></li>
-   * <li><code>2003-04-26</code></li>
-   * </ul>
-   * <p>
-   * If you are getting an {@code IllegalArgumentException} with <i>"Unknown pattern character 'X'"</i> message (some Android versions don't support it),
-   * you can explicitly specify the date format to use so that the default ones are bypassed.
-   *
-   * @param dateAsString the given Date represented as String in default or custom date format.
-   * @return this assertion object.
-   * @throws AssertionError if the actual {@code Date} is {@code null}.
-   * @throws NullPointerException if given date as String is {@code null}.
-   * @throws AssertionError if the actual {@code Date} is not before or equals to the given Date represented as
-   *           String.
-   * @throws AssertionError if the given date as String could not be converted to a Date.
-   * @deprecated prefer calling {@link #isBeforeOrEqualTo(String)}
-   */
-  @Deprecated
-  public SELF isBeforeOrEqualsTo(String dateAsString) {
-    return isBeforeOrEqualTo(dateAsString);
   }
 
   /**
@@ -1263,31 +776,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   }
 
   /**
-   * Verifies that the actual {@code Date} is after or equals to the given one.
-   * <p>
-   * Example:
-   * <pre><code class='java'> SimpleDateFormat dateFormat = new SimpleDateFormat(&quot;yyyy-MM-dd&quot;);
-   *
-   * // assertions will pass
-   * assertThat(dateFormat.parse(&quot;2000-12-01&quot;)).isAfterOrEqualsTo(dateFormat.parse(&quot;1990-12-01&quot;));
-   * assertThat(dateFormat.parse(&quot;2000-12-01&quot;)).isAfterOrEqualsTo(dateFormat.parse(&quot;2000-12-01&quot;));
-   *
-   * // assertion will fail
-   * assertThat(dateFormat.parse(&quot;1990-12-01&quot;)).isAfterOrEqualsTo(dateFormat.parse(&quot;2000-12-01&quot;));</code></pre>
-   *
-   * @param other the given Date.
-   * @return this assertion object.
-   * @throws AssertionError if the actual {@code Date} is {@code null}.
-   * @throws NullPointerException if other {@code Date} is {@code null}.
-   * @throws AssertionError if the actual {@code Date} is not after or equals to the given one.
-   * @deprecated prefer calling {@link #isAfterOrEqualTo(Date)}
-   */
-  @Deprecated
-  public SELF isAfterOrEqualsTo(Date other) {
-    return isAfterOrEqualTo(other);
-  }
-
-  /**
    * Verifies that the actual {@code Date} is after or equal to the given one.
    * <p>
    * Example:
@@ -1332,60 +820,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   public SELF isAfterOrEqualTo(Instant other) {
     dates.assertIsAfterOrEqualTo(info, actual, dateFrom(other));
     return myself;
-  }
-
-  /**
-   * Same assertion as {@link #isAfterOrEqualsTo(Date)} but given date is represented as String either with one of the
-   * supported default date formats or a user custom date format (set with method {@link #withDateFormat(DateFormat)}).
-   * <p>
-   * User custom date format takes precedence over the default ones.
-   * <p>
-   * Unless specified otherwise, beware that the default formats are expressed in the current local timezone.
-   * <p>
-   * Example:
-   * <pre><code class='java'> // assertion will pass
-   * // theTwoTowers release date : 2002-12-18
-   * assertThat(theTwoTowers.getReleaseDate()).isAfterOrEqualsTo("2002-12-17");
-   * assertThat(theTwoTowers.getReleaseDate()).isAfterOrEqualsTo("2002-12-18");
-   *
-   * // assertion will fail
-   * assertThat(theTwoTowers.getReleaseDate()).isAfterOrEqualsTo("2002-12-19")</code></pre>
-   * <p>
-   * Defaults date format (expressed in the local time zone unless specified otherwise) are:
-   * <ul>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSSX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ssX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss</code></li>
-   * <li><code>yyyy-MM-dd</code></li>
-   * </ul>
-   * <p>
-   * Example of valid string date representations:
-   * <ul>
-   * <li><code>2003-04-26T03:01:02.758+00:00</code></li>
-   * <li><code>2003-04-26T03:01:02.999</code></li>
-   * <li><code>2003-04-26 03:01:02.999</code></li>
-   * <li><code>2003-04-26T03:01:02+00:00</code></li>
-   * <li><code>2003-04-26T13:01:02</code></li>
-   * <li><code>2003-04-26</code></li>
-   * </ul>
-   * <p>
-   * If you are getting an {@code IllegalArgumentException} with <i>"Unknown pattern character 'X'"</i> message (some Android versions don't support it),
-   * you can explicitly specify the date format to use so that the default ones are bypassed.
-   *
-   * @param dateAsString the given Date represented as String in default or custom date format.
-   * @return this assertion object.
-   * @throws AssertionError if the actual {@code Date} is {@code null}.
-   * @throws NullPointerException if given date as String is {@code null}.
-   * @throws AssertionError if the actual {@code Date} is not after or equals to the given Date represented as
-   *           String.
-   * @throws AssertionError if the given date as String could not be converted to a Date.
-   * @deprecated prefer calling {@link #isAfterOrEqualTo(String)}
-   */
-  @Deprecated
-  public SELF isAfterOrEqualsTo(String dateAsString) {
-    return isAfterOrEqualTo(dateAsString);
   }
 
   /**
@@ -1990,16 +1424,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   }
 
   /**
-   * @deprecated use {@link #hasYear(int)} instead.
-   * @param year the year to compare actual year to
-   * @return this assertion object.
-   */
-  @Deprecated
-  public SELF isWithinYear(int year) {
-    return hasYear(year);
-  }
-
-  /**
    * Verifies that the actual {@code Date} month is equal to the given month, <b>month value starting at 1</b>
    * (January=1, February=2, ...).
    * <p>
@@ -2024,16 +1448,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   }
 
   /**
-   * @deprecated use {@link #hasMonth(int)} instead.
-   * @param month the month to compare actual month to, <b>month value starting at 1</b> (January=1, February=2, ...).
-   * @return this assertion object.
-   */
-  @Deprecated
-  public SELF isWithinMonth(int month) {
-    return hasMonth(month);
-  }
-
-  /**
    * Verifies that the actual {@code Date} day of month is equal to the given day of month.
    * <p>
    * Note that using a {@link #usingComparator(Comparator) custom comparator}  has no effect on this assertion.
@@ -2054,16 +1468,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   public SELF hasDayOfMonth(int dayOfMonth) {
     dates.assertHasDayOfMonth(info, actual, dayOfMonth);
     return myself;
-  }
-
-  /**
-   * @deprecated use {@link #hasDayOfMonth(int)} instead.
-   * @param dayOfMonth the day of month to compare actual day of month to
-   * @return this assertion object.
-   */
-  @Deprecated
-  public SELF isWithinDayOfMonth(int dayOfMonth) {
-    return hasDayOfMonth(dayOfMonth);
   }
 
   /**
@@ -2091,17 +1495,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   }
 
   /**
-   * @deprecated use {@link #hasDayOfWeek(int)} instead.
-   * @param dayOfWeek the day of week to compare actual day of week to, see {@link Calendar#DAY_OF_WEEK} for valid
-   *          values
-   * @return this assertion object.
-   */
-  @Deprecated
-  public SELF isWithinDayOfWeek(int dayOfWeek) {
-    return hasDayOfWeek(dayOfWeek);
-  }
-
-  /**
    * Verifies that the actual {@code Date} hour of day is equal to the given hour of day (24-hour clock).
    * <p>
    * Note that using a {@link #usingComparator(Comparator) custom comparator}  has no effect on this assertion.
@@ -2121,16 +1514,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   public SELF hasHourOfDay(int hourOfDay) {
     dates.assertHasHourOfDay(info, actual, hourOfDay);
     return myself;
-  }
-
-  /**
-   * @deprecated use {@link #hasHourOfDay(int)} instead.
-   * @param hourOfDay the hour of day to compare actual hour of day to (24-hour clock)
-   * @return this assertion object.
-   */
-  @Deprecated
-  public SELF isWithinHourOfDay(int hourOfDay) {
-    return hasHourOfDay(hourOfDay);
   }
 
   /**
@@ -2156,16 +1539,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   }
 
   /**
-   * @deprecated use {@link #hasMinute(int)} instead.
-   * @param minute the minute to compare actual minute to
-   * @return this assertion object.
-   */
-  @Deprecated
-  public SELF isWithinMinute(int minute) {
-    return hasMinute(minute);
-  }
-
-  /**
    * Verifies that the actual {@code Date} second is equal to the given second.
    * <p>
    * Note that using a {@link #usingComparator(Comparator) custom comparator}  has no effect on this assertion.
@@ -2188,16 +1561,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   }
 
   /**
-   * @deprecated use {@link #hasSecond(int)} instead.
-   * @param second the second to compare actual second to
-   * @return this assertion object.
-   */
-  @Deprecated
-  public SELF isWithinSecond(int second) {
-    return hasSecond(second);
-  }
-
-  /**
    * Verifies that the actual {@code Date} millisecond is equal to the given millisecond.
    * <p>
    * Examples:
@@ -2217,16 +1580,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   public SELF hasMillisecond(int millisecond) {
     dates.assertHasMillisecond(info, actual, millisecond);
     return myself;
-  }
-
-  /**
-   * @deprecated use {@link #hasMillisecond(int)} instead.
-   * @param millisecond the millisecond to compare actual millisecond to
-   * @return this assertion object.
-   */
-  @Deprecated
-  public SELF isWithinMillisecond(int millisecond) {
-    return hasMillisecond(millisecond);
   }
 
   /**
@@ -2421,7 +1774,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
    * <p>
    * Note that using a {@link #usingComparator(Comparator) custom comparator}  has no effect on this assertion.
    * <p>
-   * This assertion is logically equivalent to {@link #isEqualToIgnoringHours(Date)}.
    *
    * @param other the given {@code Date} to compare actual {@code Date} to.
    * @return this assertion object.
@@ -2445,7 +1797,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
    *
    * Note that using a {@link #usingComparator(Comparator) custom comparator}  has no effect on this assertion.
    * <p>
-   * This assertion is logically equivalent to {@link #isEqualToIgnoringHours(Instant)}.
    *
    * @param other the given {@code Date} to compare actual {@code Date} to.
    * @return this assertion object.
@@ -2494,7 +1845,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
    * If you are getting an {@code IllegalArgumentException} with <i>"Unknown pattern character 'X'"</i> message (some Android versions don't support it),
    * you can explicitly specify the date format to use so that the default ones are bypassed.
    * <p>
-   * This assertion is logically equivalent to {@link #isEqualToIgnoringHours(String)}.
    *
    * @param dateAsString the given Date represented as String in default or custom date format.
    * @return this assertion object.
@@ -2619,91 +1969,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
   }
 
   /**
-   * Verifies that actual and given {@code Date} have same hour, day, month and year fields values.
-   * <p>
-   * Example:
-   * <pre><code class='java'> Date date1 = parseDatetime("2003-01-01T12:00:00");
-   * Date date2 = parseDatetime("2003-01-01T12:30:00");
-   *
-   * // succeeds
-   * assertThat(date1).isInSameHourAs(date2);</code></pre>
-   *
-   * <b>This assertion does not make a true chronological comparison</b> since two dates can have different hour fields
-   * and yet be in the same chronological hour, e.g:
-   *
-   * <pre><code class='java'> // dates in the same hour time window but with different hour fields
-   * Date date1 = parseDatetime("2003-01-01T12:00:00");
-   * Date date2 = parseDatetime("2003-01-01T11:59:00");</code></pre>
-   *
-   * If you want to assert that two dates are chronologically in the same hour time window use
-   * {@link #isInSameHourWindowAs(java.util.Date) isInSameHourWindowAs} assertion (note that if
-   * <code>isInSameHourAs</code> succeeds then <code>isInSameHourWindowAs</code> will succeed too).
-   * <p>
-   * Note that using a {@link #usingComparator(Comparator) custom comparator}  has no effect on this assertion.
-   * <p>
-   * This assertion is logically equivalent to {@link #isEqualToIgnoringMinutes(Date)}.
-   *
-   * @param other the given {@code Date} to compare actual {@code Date} to.
-   * @return this assertion object.
-   * @throws NullPointerException if {@code Date} parameter is {@code null}.
-   * @throws AssertionError if the actual {@code Date} is {@code null}.
-   * @throws AssertionError if actual and given {@code Date} are not in the same hour, day, month and year.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isInSameHourAs(Date other) {
-    dates.assertIsInSameHourAs(info, actual, other);
-    return myself;
-  }
-
-  /**
-   * Same assertion as {@link #isInSameHourAs(Date)} but given date is represented as String either with one of the
-   * supported default date formats or a user custom date format (set with method {@link #withDateFormat(DateFormat)}).
-   * <p>
-   * User custom date format takes precedence over the default ones.
-   * <p>
-   * Unless specified otherwise, beware that the default formats are expressed in the current local timezone.
-   * <p>
-   * Defaults date format (expressed in the local time zone unless specified otherwise) are:
-   * <ul>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSSX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ssX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss</code></li>
-   * <li><code>yyyy-MM-dd</code></li>
-   * </ul>
-   * <p>
-   * Example of valid string date representations:
-   * <ul>
-   * <li><code>2003-04-26T03:01:02.758+00:00</code></li>
-   * <li><code>2003-04-26T03:01:02.999</code></li>
-   * <li><code>2003-04-26 03:01:02.999</code></li>
-   * <li><code>2003-04-26T03:01:02+00:00</code></li>
-   * <li><code>2003-04-26T13:01:02</code></li>
-   * <li><code>2003-04-26</code></li>
-   * </ul>
-   * <p>
-   * If you are getting an {@code IllegalArgumentException} with <i>"Unknown pattern character 'X'"</i> message (some Android versions don't support it),
-   * you can explicitly specify the date format to use so that the default ones are bypassed.
-   * <p>
-   * This assertion is logically equivalent to {@link #isEqualToIgnoringMinutes(String)}.
-   *
-   * @param dateAsString the given Date represented as String in default or custom date format.
-   * @return this assertion object.
-   * @throws NullPointerException if dateAsString parameter is {@code null}.
-   * @throws AssertionError if the actual {@code Date} is {@code null}.
-   * @throws AssertionError if actual and given {@code Date} are not in the same hour.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isInSameHourAs(String dateAsString) {
-    return isInSameHourAs(parse(dateAsString));
-  }
-
-  /**
    * Verifies that actual and given {@code Date} are chronologically in the same minute (i.e. their time difference &lt; 1
    * minute).
    * <p>
@@ -2816,93 +2081,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
    */
   public SELF isInSameMinuteWindowAs(String dateAsString) {
     return isInSameMinuteWindowAs(parse(dateAsString));
-  }
-
-  /**
-   * Verifies that actual and given {@code Date} have same minute, same hour, day, month and year fields values.
-   * <p>
-   * Example:
-   * <pre><code class='java'> Date date1 = parseDatetime("2003-01-01T12:01:00");
-   * Date date2 = parseDatetime("2003-01-01T12:01:30");
-   *
-   * // succeeds because the all the fields up to minutes are the same
-   * assertThat(date1).isInSameMinuteAs(date2);</code></pre>
-   *
-   * <b>It does not make a true chronological comparison</b> since two dates can have different minute fields and yet be
-   * in the same chronological minute, e.g:
-   * <pre><code class='java'> // dates in the same minute time window but with different minute fields
-   * Date date1 = parseDatetime("2003-01-01T12:01:00");
-   * Date date3 = parseDatetime("2003-01-01T12:00:59");
-   *
-   * // fails because minutes fields differ even though time difference is only 1s !
-   * assertThat(date1).isInSameMinuteAs(date3); // ERROR</code></pre>
-   *
-   * If you want to assert that two dates are in the same minute time window use
-   * {@link #isInSameMinuteWindowAs(java.util.Date) isInSameMinuteWindowAs} assertion (note that if
-   * <code>isInSameMinuteAs</code> succeeds then <code>isInSameMinuteWindowAs</code> will succeed too).
-   * <p>
-   * Note that using a {@link #usingComparator(Comparator) custom comparator}  has no effect on this assertion.
-   * <p>
-   * This assertion is logically equivalent to {@link #isEqualToIgnoringSeconds(Date)}.
-   *
-   * @param other the given {@code Date} to compare actual {@code Date} to.
-   * @return this assertion object.
-   * @throws NullPointerException if {@code Date} parameter is {@code null}.
-   * @throws AssertionError if the actual {@code Date} is {@code null}.
-   * @throws AssertionError if actual and given {@code Date} are not in the same minute.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isInSameMinuteAs(Date other) {
-    dates.assertIsInSameMinuteAs(info, actual, other);
-    return myself;
-  }
-
-  /**
-   * Same assertion as {@link #isInSameMinuteAs(Date)} but given date is represented as String either with one of the
-   * supported default date formats or a user custom date format (set with method {@link #withDateFormat(DateFormat)}).
-   * <p>
-   * User custom date format takes precedence over the default ones.
-   * <p>
-   * Unless specified otherwise, beware that the default formats are expressed in the current local timezone.
-   * <p>
-   * Default date formats (expressed in the local time zone unless specified otherwise) are:
-   * <ul>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSSX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ssX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss</code></li>
-   * <li><code>yyyy-MM-dd</code></li>
-   * </ul>
-   * <p>
-   * Example of valid string date representations:
-   * <ul>
-   * <li><code>2003-04-26T03:01:02.758+00:00</code></li>
-   * <li><code>2003-04-26T03:01:02.999</code></li>
-   * <li><code>2003-04-26 03:01:02.999</code></li>
-   * <li><code>2003-04-26T03:01:02+00:00</code></li>
-   * <li><code>2003-04-26T13:01:02</code></li>
-   * <li><code>2003-04-26</code></li>
-   * </ul>
-   * <p>
-   * If you are getting an {@code IllegalArgumentException} with <i>"Unknown pattern character 'X'"</i> message (some Android versions don't support it),
-   * you can explicitly specify the date format to use so that the default ones are bypassed.
-   * <p>
-   * This assertion is logically equivalent to {@link #isEqualToIgnoringSeconds(String)}.
-   *
-   * @param dateAsString the given Date represented as String in default or custom date format.
-   * @return this assertion object.
-   * @throws NullPointerException if dateAsString parameter is {@code null}.
-   * @throws AssertionError if the actual {@code Date} is {@code null}.
-   * @throws AssertionError if actual and given {@code Date} are not in the same minute.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isInSameMinuteAs(String dateAsString) {
-    return isInSameMinuteAs(parse(dateAsString));
   }
 
   /**
@@ -3030,92 +2208,6 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
    */
   public SELF isInSameSecondWindowAs(String dateAsString) {
     return isInSameSecondWindowAs(parse(dateAsString));
-  }
-
-  /**
-   * Verifies that actual and given {@code Date} have same second, minute, hour, day, month and year fields values.
-   *
-   * <pre><code class='java'> Date date1 = parseDatetimeWithMs("2003-01-01T12:00:01.000");
-   * Date date2 = parseDatetimeWithMs("2003-01-01T12:00:01.250");
-   *
-   * // succeeds because the all the time fields up to seconds are the same
-   * assertThat(date1).isInSameSecondAs(date2);</code></pre>
-   *
-   * <b>It does not make a true chronological comparison</b> since two dates can have different second fields and yet
-   * be
-   * in the same chronological second, e.g:
-   * <pre><code class='java'> Date date1 = parseDatetimeWithMs("2003-01-01T12:00:01.000");
-   * Date date3 = parseDatetimeWithMs("2003-01-01T12:00:00.999");
-   *
-   * // fails because seconds fields differ even though time difference is only 1ms !
-   * assertThat(date1).isInSameSecondAs(date3); // ERROR</code></pre>
-   *
-   * If you want to assert that two dates are in the same second time window use
-   * {@link #isInSameSecondWindowAs(java.util.Date) isInSameSecondWindowAs} assertion.
-   * <p>
-   * If you want to compare second fields only (without minute, hour, day, month and year), you could write :
-   * <code>assertThat(myDate).hasSecond(secondOf(otherDate))</code><br>
-   * using {@link org.assertj.core.util.DateUtil#secondOf(Date)} to get the second of a given Date.
-   * <p>
-   * Note that using a {@link #usingComparator(Comparator) custom comparator}  has no effect on this assertion.
-   * <p>
-   * This assertion is logically equivalent to {@link #isEqualToIgnoringMillis(Date)}.
-   *
-   * @param other the given {@code Date} to compare actual {@code Date} to.
-   * @return this assertion object.
-   * @throws NullPointerException if {@code Date} parameter is {@code null}.
-   * @throws AssertionError if the actual {@code Date} is {@code null}.
-   * @throws AssertionError if actual and given {@code Date} are not in the same second.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isInSameSecondAs(Date other) {
-    dates.assertIsInSameSecondAs(info, actual, other);
-    return myself;
-  }
-
-  /**
-   * Same assertion as {@link #isInSameSecondAs(Date)} but given date is represented as String either with one of the
-   * supported defaults date format or a user custom date format (set with method {@link #withDateFormat(DateFormat)}).
-   * <p>
-   * User custom date format take precedence over the default ones.
-   * <p>
-   * Unless specified otherwise, beware that the default formats are expressed in the current local timezone.
-   * <p>
-   * Defaults date format (expressed in the local time zone unless specified otherwise) are:
-   * <ul>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSSX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd HH:mm:ss.SSS</code></li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ssX</code> (in ISO Time zone)</li>
-   * <li><code>yyyy-MM-dd'T'HH:mm:ss</code></li>
-   * <li><code>yyyy-MM-dd</code></li>
-   * </ul>
-   * <p>
-   * Example of valid string date representations:
-   * <ul>
-   * <li><code>2003-04-26T03:01:02.758+00:00</code></li>
-   * <li><code>2003-04-26T03:01:02.999</code></li>
-   * <li><code>2003-04-26 03:01:02.999</code></li>
-   * <li><code>2003-04-26T03:01:02+00:00</code></li>
-   * <li><code>2003-04-26T13:01:02</code></li>
-   * <li><code>2003-04-26</code></li>
-   * </ul>
-   * <p>
-   * If you are getting an {@code IllegalArgumentException} with <i>"Unknown pattern character 'X'"</i> message (some Android versions don't support it),
-   * you can explicitly specify the date format to use so that the default ones are bypassed.
-   * <p>
-   * This assertion is logically equivalent to {@link #isEqualToIgnoringMillis(String)}.
-   *
-   * @param dateAsString the given Date represented as String.
-   * @return this assertion object.
-   * @deprecated Use {@link #isCloseTo(Date, long)} instead, although not exactly the same semantics,
-   * this is the right way to compare with a given precision.
-   */
-  @Deprecated
-  public SELF isInSameSecondAs(String dateAsString) {
-    return isInSameSecondAs(parse(dateAsString));
   }
 
   /**
@@ -3421,7 +2513,7 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
    * User date formats are used before default ones in the order they have been registered (first registered, first
    * used).
    * <p>
-   * AssertJ is gonna use any date formats registered with one of these methods :
+   * AssertJ is going to use any date formats registered with one of these methods :
    * <ul>
    * <li>{@link #withDateFormat(String)}</li>
    * <li>{@link #withDateFormat(java.text.DateFormat)}</li>
@@ -3468,7 +2560,7 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
    * User date formats are used before default ones in the order they have been registered (first registered, first
    * used).
    * <p>
-   * AssertJ is gonna use any date formats registered with one of these methods :
+   * AssertJ is going to use any date formats registered with one of these methods:
    * <ul>
    * <li>{@link #withDateFormat(String)}</li>
    * <li>{@link #withDateFormat(java.text.DateFormat)}</li>
@@ -3585,7 +2677,7 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
    * @return the corresponding Date, null if dateAsString parameter is null.
    * @throws AssertionError if the string can't be parsed as a Date
    */
-  @VisibleForTesting
+  // TODO reduce the visibility of the fields annotated with @VisibleForTesting
   Date parse(String dateAsString) {
     if (dateAsString == null) return null;
     // parse with date format specified by user if any, otherwise use default formats
@@ -3596,8 +2688,9 @@ public abstract class AbstractDateAssert<SELF extends AbstractDateAssert<SELF>> 
     date = parseDateWithDefaultDateFormats(dateAsString);
     if (date != null) return date;
     // no matching date format, throw an error
-    throw new AssertionError(String.format("Failed to parse %s with any of these date formats:%n   %s", dateAsString,
-                                           info.representation().toStringOf(dateFormatsInOrderOfUsage())));
+    throw new AssertionError("Failed to parse %s with any of these date formats:%n   %s".formatted(dateAsString,
+                                                                                                   info.representation()
+                                                                                                       .toStringOf(dateFormatsInOrderOfUsage())));
   }
 
   private synchronized Date parseDateWithDefaultDateFormats(final String dateAsString) {
