@@ -149,7 +149,6 @@ import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDate;
@@ -200,7 +199,6 @@ import java.util.stream.DoubleStream;
 import java.util.stream.IntStream;
 import java.util.stream.LongStream;
 import java.util.stream.Stream;
-
 import org.assertj.core.api.AssertFactory.ValueProvider;
 import org.assertj.core.util.Lists;
 import org.assertj.core.util.Sets;
@@ -1851,7 +1849,7 @@ class InstanceOfAssertFactoriesTest {
     @Test
     void getRawClass() {
       // WHEN
-      Class<?> result = array(Integer[].class).getRawClass();
+      Class<?> result = array(Integer.class).getRawClass();
       // THEN
       then(result).isEqualTo(Integer[].class);
     }
@@ -1859,7 +1857,7 @@ class InstanceOfAssertFactoriesTest {
     @Test
     void createAssert() {
       // WHEN
-      ObjectArrayAssert<Integer> result = array(Integer[].class).createAssert(actual);
+      ObjectArrayAssert<Integer> result = array(Integer.class).createAssert(actual);
       // THEN
       result.containsExactly(0, 1);
     }
@@ -1870,7 +1868,7 @@ class InstanceOfAssertFactoriesTest {
       // GIVEN
       ValueProvider<?> valueProvider = mockThatDelegatesTo(delegate);
       // WHEN
-      ObjectArrayAssert<Integer> result = array(Integer[].class).createAssert(valueProvider);
+      ObjectArrayAssert<Integer> result = array(Integer.class).createAssert(valueProvider);
       // THEN
       result.containsExactly(0, 1);
       verify(valueProvider).apply(Integer[].class);
@@ -1925,7 +1923,7 @@ class InstanceOfAssertFactoriesTest {
     @Test
     void getRawClass() {
       // WHEN
-      Class<?> result = array2D(Integer[][].class).getRawClass();
+      Class<?> result = array2D(Integer.class).getRawClass();
       // THEN
       then(result).isEqualTo(Integer[][].class);
     }
@@ -1933,7 +1931,7 @@ class InstanceOfAssertFactoriesTest {
     @Test
     void createAssert() {
       // WHEN
-      Object2DArrayAssert<Integer> result = array2D(Integer[][].class).createAssert(actual);
+      Object2DArrayAssert<Integer> result = array2D(Integer.class).createAssert(actual);
       // THEN
       result.hasDimensions(2, 2);
     }
@@ -1943,12 +1941,11 @@ class InstanceOfAssertFactoriesTest {
       // GIVEN
       ValueProvider<?> valueProvider = mockThatDelegatesTo(type -> actual);
       // WHEN
-      Object2DArrayAssert<Integer> result = array2D(Integer[][].class).createAssert(valueProvider);
+      Object2DArrayAssert<Integer> result = array2D(Integer.class).createAssert(valueProvider);
       // THEN
       result.hasDimensions(2, 2);
       verify(valueProvider).apply(Integer[][].class);
     }
-
   }
 
   @Nested
@@ -3925,7 +3922,7 @@ class InstanceOfAssertFactoriesTest {
   @Nested
   class Path_Factory {
 
-    private final Object actual = Paths.get("non-existing");
+    private final Object actual = Path.of("non-existing");
 
     @Test
     void getRawClass() {
