@@ -28,6 +28,6 @@ class ShouldContainOneOrMoreWhitespaces_create_Test {
     // WHEN
     String message = factory.create(new TextDescription("Test"), new StandardRepresentation());
     // THEN
-    then(message).isEqualTo(String.format("[Test] %nExpecting string to contain one or more whitespaces but did not, string was:%n  \"Luke\""));
+    then(message).isEqualTo("[Test] %nExpecting string to contain one or more whitespaces but did not, string was:%n  \"Luke\"".formatted());
   }
 }
