@@ -15,11 +15,11 @@ package org.assertj.tests.core.api;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.linesOf;
 import static org.assertj.core.util.Lists.newArrayList;
+import static org.assertj.tests.core.testkit.ClasspathResources.resourceFile;
 
 import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
@@ -29,14 +29,14 @@ class Assertions_linesOf_Test {
 
   @Test
   void should_read_lines_of_file_with_UTF8_charset() {
-    File file = new File("src/test/resources/utf8.txt");
+    File file = resourceFile("utf8.txt");
     assertThat(linesOf(file, "UTF-8")).isEqualTo(EXPECTED_CONTENT);
     assertThat(linesOf(file, StandardCharsets.UTF_8)).isEqualTo(EXPECTED_CONTENT);
   }
 
   @Test
   void should_read_lines_of_path_with_UTF8_charset() {
-    Path path = Paths.get("src", "test", "resources", "utf8.txt");
+    Path path = Path.of("src", "test", "resources", "utf8.txt");
     assertThat(linesOf(path, "UTF-8")).isEqualTo(EXPECTED_CONTENT);
     assertThat(linesOf(path, StandardCharsets.UTF_8)).isEqualTo(EXPECTED_CONTENT);
   }
